# neutron-mc

./: CITATION.cff  CMakeLists.txt  README.md  SConstruct  main.cc  plotter.ipynb  shieldVal.cpp
crossSecs/: carbonAbs.csv  carbonScat.csv  carbonTot.csv  ironAbs.csv  ironScat.csv  ironTot.csv  plutoniumAbs.csv  plutoniumFis.csv  plutoniumScat.csv  plutoniumTot.csv  uranAbs.csv  uranFis.csv  uranTot.csv
geos/: checkers.txt  godcomplex.txt  godsquarcle.txt  godsquare.txt  godsquircle.txt  incased.txt  ironShield.txt  jezebelcomplex.txt  jezebelsquarcle.txt  jezebelsquare.txt  jezebelsquircle.txt  twoCubes.txt
include/: baseClasses.h  em.h  jh.h  ke.h
results/: TESTcheckersMain.txt  TESTjezebelcomplexMain.txt  TESTjezebelsquarcleMain.txt  TESTjezebelsquareMain.txt  TESTjezebelsquircleMain.txt  checkersMain.txt  godsquarcleMain.txt  jezSquarcleMain.txt  jezSquircleMain.txt  jezcomplMain.txt  jezsquareMain.txt  rescheckersMain.txt  resincasedMain.txt  resjezebelcomplexMain.txt  resjezebelsquarcleMain.txt  resjezebelsquareMain.txt  resjezebelsquircleMain.txt  restwoCubesMain.txt  shellValMain.txt  shieldValMain.txt  twoCubesMain.txt
results/newRes/: rescheckersMain.txt  resjezebelcomplexMain.txt  resjezebelsquarcleMain.txt  resjezebelsquareMain.txt  resjezebelsquircleMain.txt
src/: baseClasses.cpp  em.cc  jh.cpp  ke.cpp
